--- a/Application/pom.xml
+++ b/Application/pom.xml
@@ -58,7 +58,7 @@
             <version>2.6</version>
             <scope>system</scope>
             <systemPath>
-                ${project.basedir}/Application/resources/commons-io-2.6.jar
+                ${project.basedir}/resources/commons-io-2.6.jar
             </systemPath>
         </dependency>
         <dependency>
@@ -67,7 +67,7 @@
             <version>2.8.5</version>
             <scope>system</scope>
             <systemPath>
-                ${project.basedir}/Application/resources/gson-2.8.5.jar
+                ${project.basedir}/resources/gson-2.8.5.jar
             </systemPath>
         </dependency>
         <dependency>
@@ -76,7 +76,7 @@
             <version>1.4.4</version>
             <scope>system</scope>
             <systemPath>
-                ${project.basedir}/Application/resources/neo4j-java-driver-1.4.4.jar
+                ${project.basedir}/resources/neo4j-java-driver-1.4.4.jar
             </systemPath>
         </dependency>
         <dependency>
@@ -85,7 +85,7 @@
             <version>1</version>
             <scope>system</scope>
             <systemPath>
-                ${project.basedir}/Application/resources/org.json.jar
+                ${project.basedir}/resources/org.json.jar
             </systemPath>
         </dependency>
     </dependencies>
