--- a/pom.xml
+++ b/pom.xml
@@ -52,41 +52,29 @@
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
-            <scope>system</scope>
-            <systemPath>
-                ${project.basedir}/resources/commons-io-2.6.jar
-            </systemPath>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
-            <groupId>gson</groupId>
+            <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
-            <scope>system</scope>
-            <systemPath>
-                ${project.basedir}/resources/gson-2.8.5.jar
-            </systemPath>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.neo4j.driver/neo4j-java-driver -->
         <dependency>
-            <groupId>neo4j</groupId>
-            <artifactId>neo4j</artifactId>
+            <groupId>org.neo4j.driver</groupId>
+            <artifactId>neo4j-java-driver</artifactId>
             <version>1.4.4</version>
-            <scope>system</scope>
-            <systemPath>
-                ${project.basedir}/resources/neo4j-java-driver-1.4.4.jar
-            </systemPath>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
         <dependency>
-            <groupId>json</groupId>
+            <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>1</version>
-            <scope>system</scope>
-            <systemPath>
-                ${project.basedir}/resources/org.json.jar
-            </systemPath>
+            <version>20180813</version>
         </dependency>
     </dependencies>
     <reporting>
